--- a/src/app/choose-tiles/page.module.scss
+++ b/src/app/choose-tiles/page.module.scss
@@ -13,6 +13,13 @@
   background: rgb(var(--background-start-rgb));
   display: flex;
   gap: 1rem;
+
+  > a {
+    width: 100%;
+    height: auto;
+    padding-bottom: 2rem;
+    display: flex;
+  }
 }
 
 :global(#app) {
@@ -25,7 +32,7 @@
     font-size: 1.5rem;
     height: auto;
     width: 100%;
-    margin-bottom: 2rem;
+
   }
 }
 
